# vim-textobj-bettertag

./: .gitignore  CHANGELOG.md  LICENSE  README.md  aqua.yaml  pyproject.toml  renovate.json5
.github/: release-please-config.json
.github/workflows/: _check-actions.yml  ci.yml  release.yaml  test.yml
autoload/textobj/: bettertag.vim
doc/: vim-textobj-bettertag.txt
plugin/textobj/: bettertag.vim
test/: .themisrc  bettertag.vim
